--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -2,5 +2,18 @@
 
 {% block body %}
 
-Thanks! Your confirmation code is {{uuid}}. Use this to refer to your response.
+<div id="intro">
+<h1>Thanks for your submission</h1>
+
+<div class="lead">
+
+<p>Thanks! Your confirmation code is {{uuid}}. Use this to refer to your response.</p>
+
+</div>
+
+<div class="lead">
+	<a href="/dashboard">Take another survey</a>
+</div>
+</div>
+
 {% endblock %}
