--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
 	
 	<footer class="footer">
 		<div class="lead">
-        <span class="pull-right text-muted small">{% if user.is_authenticated %}<a href="/logout">LogOut</a>{% else %}<a href="/logout">LogIn</a>{% endif %}</span>
+        <span class="pull-right text-muted small">{% if user.is_authenticated %}<a href="/logout">LogOut</a>{% else %}<a href="/login">LogIn</a>{% endif %}</span>
 	{% block footer %}
 	{% endblock %}
 	</div>
