--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 	<meta charset="utf-8">
-	<title>Embassy Network</title>
+	<title>Applied Ideas Sandbox</title>
 	<!-- responsive support -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Applied Ideas. From Measuring to Doing">
