--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,7 +5,8 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <h2 class="page-header">Welcome to your Applied IdeaLog, {{ user.username }}</h2>
+            <h3 class="page-header">Welcome, {{ user.username }}</h3>
+        <small class="text-muted small"><i>{{survey.description|safe}}</i></small>
         </div>
         <!-- /.col-lg-12 -->
     </div>
@@ -15,11 +16,11 @@
         <div class="col-lg-8">
 {#            http://stackoverflow.com/questions/20727029/django-dropzone-js-form-validation-fails-for-multiple-files   #}
             <form class="form" action="/dashboard/" method="post" enctype="multipart/form-data">
-{#                {% csrf_token %}#}
+                {% csrf_token %}
 
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <i class="fa fa-bar-chart-o fa-fw"></i> Questions
+                        <i class="fa fa-bar-chart-o fa-fw"></i> Tell us about your idea
                     </div>
 
                     <!-- /.panel-heading -->
@@ -34,7 +35,7 @@
 
                                             <div class="form-field-body">
                                                 <!-- append to an attribute -->
-                                                {% render_field response_form.title class+="form-control" placeholder="The Claim-o-Matic" %}
+                                                {% render_field response_form.title class+="form-control" placeholder="e.g.: The Claim-o-Matic" %}
 
 {#                                                <!-- template variables can be used as attribute values -->#}
 {#                                                {% render_field form.text placeholder=form.text.label %}#}
