--- a/templates/response.html
+++ b/templates/response.html
@@ -18,7 +18,7 @@
 
 {% for a in answer %}
     {{ a.question.text }}
-    {{ a.question.body }}
+    {{ a.answertext.body }}
 
     {#    Get chile elements#}
 {#    http://stackoverflow.com/questions/929029/how-do-i-access-the-child-classes-of-an-object-in-django-without-knowing-the-nam#}
