updated edit mode

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,7 +12,7 @@
 
         {% if success %}
             <div class="alert alert-danger">
-                {{ success|safe }}
+                {{ success|safe }} <a href="/dashboard/" class="pull-right" class ="fa fa-times"></a>
             </div>
         {% endif %}
     </div>
