--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -539,8 +539,8 @@
 {#        https://djangogirls.gitbooks.io/django-girls-tutorial-extensions/homework_create_more_models/#}
             <div class="chat-panel panel panel-default">
                 <div class="panel-heading">
-                    <i class="fa fa-comments fa-fw"></i> Messages
-                                        <div class="btn-group pull-right">
+                    <i class="fa fa-comments fa-fw"></i> Notes
+                                        <div class="pull-right text-muted">Tell us what you think
 {#                        <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">#}
 {#                            <i class="fa fa-chevron-down"></i>#}
 {#                        </button>#}
