--- a/templates/index-personal.html
+++ b/templates/index-personal.html
@@ -189,7 +189,7 @@ Footer
 
 				<a href="" class="footer-logo"><img src="/media/blockwise/images/blockwise.png" data-at2x="/media/blockwise/images/blockwise.png" alt="Unicum - creative agency template" /></a>
 
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
+				<p>Blockwise is currently being tested on a select number of neighborhood leaders. Enter your info for more details or to be added to our next batch. </p>
 
 			</div>
 		</div>
