--- a/templates/index-personal.html
+++ b/templates/index-personal.html
@@ -118,7 +118,7 @@ Content section area
 
 		<div class="layer">
 			<h1>Better Blocks.<br />Stronger Communities.</h1>
-			<p>Blockwise helps local leaders collaborate with, engage, and improve their communities.</p>
+			<p>Blockwise helps local leaders collaborate with, empower, and improve their communities.</p>
 			<a href="#about" rel="relativeanchor"><div class="button yellow">About Us</div></a>
 		</div>
 
